Updated build.gradle with jlink and jdk download, added temporary app icon