@@ -40,19 +40,57 @@ javafx {
 }
 
 jlink {
-    imageZip = file("$buildDir/image-zip/tellthis.zip")
-    options = ['--bind-services', '--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+
+    targetPlatform("lin") {
+        jdkHome = jdkDownload("https://github.com/AdoptOpenJDK/openjdk15-binaries/releases/download/jdk-15.0.2%2B7/OpenJDK15U-jdk_x64_linux_hotspot_15.0.2_7.tar.gz") {
+            downloadDir = "$buildDir/jdkLin"
+            archiveName = "lin-jdk"
+            archiveExtension = "tar.gz"
+            pathToHome = "jdk-15.0.2+7"
+            overwrite = false
+        }
+    }
+    targetPlatform("mac") {
+        jdkHome = jdkDownload("https://github.com/AdoptOpenJDK/openjdk15-binaries/releases/download/jdk-15.0.2%2B7/OpenJDK15U-jdk_x64_mac_hotspot_15.0.2_7.tar.gz") {
+            downloadDir = "$buildDir/jdkMac"
+            archiveName = "mac-jdk"
+            archiveExtension = "tar.gz"
+            pathToHome = "jdk-15.0.2+7/Contents/Home"
+            overwrite = false
+        }
+    }
+    targetPlatform("win") {
+        jdkHome = jdkDownload("https://github.com/AdoptOpenJDK/openjdk15-binaries/releases/download/jdk-15.0.2%2B7/OpenJDK15U-jdk_x64_windows_hotspot_15.0.2_7.zip") {
+            downloadDir = "$buildDir/jdkWin"
+            archiveName = "win-jdk"
+            archiveExtension = "zip"
+            pathToHome = "jdk-15.0.2+7"
+            overwrite = false
+        }
+    }
 
     launcher {
-        name = 'TellThis'
         noConsole = true
     }
     jpackage {
-        /*commandLine = ["${java_home}/bin/jpackage", 'create-installer', "dmg",
-        '--output', "${installer}", "--name", "${appName}",
-        '--verbose', '--echo-mode', '--module-path', 'build/libs',
-        '--add-modules', "${moduleName}", '--input', 'builds/libraries',
-        '--class', "${mainClassName}", '--module', "${mainClassName}"]*/
+        targetPlatformName = "win"
+
+        def currentOs = org.gradle.internal.os.OperatingSystem.current()
+        def imgType = currentOs.windows ? 'ico' : currentOs.macOsX ? 'icns' : 'png'
+        imageOptions += ['--icon', "src/main/resources/com/gebb/wetell/icons/wetell.$imgType"]
+        installerOptions += ['--resource-dir', "src/main/resources/com/gebb/wetell"]
+        installerOptions += ['--vendor', 'GEBB']
+
+        if(currentOs.windows) {
+            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
+        }
+        else if (currentOs.linux) {
+            installerOptions += ['--linux-package-name', 'wetell','--linux-shortcut']
+        }
+        else if (currentOs.macOsX) {
+            installerOptions += ['--mac-package-name', 'wetell']
+        }
     }
 }
 
